# mola-fe-lidar

./: CMakeLists.txt  README.md  mola-module.yml
LidarOdometry3D/: CMakeLists.txt
LidarOdometry3D/include/mola-fe-lidar-3d/: LidarOdometry3D.h
LidarOdometry3D/src/: LidarOdometry3D.cpp
apps/: CMakeLists.txt  mola-app-fe-lidar-3d-align.cpp  mola-app-fe-lidar-3d-segment-scan.cpp  mola-app-fe-lidar-align.cpp  params.yml
docs/: module-mola-fe-lidar.rst
include/mola-fe-lidar/: LidarOdometry.h
include/mola-fe-lidar-3d/: CPointCloudVoxelGrid.h  LidarOdometry3D.h  MultiCloudICP.h
include/mola-fe-lidar-icp/: CPointCloudVoxelGrid.h  LidarICP.h
p2p2/: CMakeLists.txt
p2p2-icp/p2p2/include/p2p2/: PointsPlanesICP.h
p2p2-icp/tests/: CMakeLists.txt  mola-test-p2p2-olae.cpp
p2p2/include/p2p2/: IterTermReason.h  MultiCloudICP.h  Parameters.h  PointCloudEdgesFilter.h  PointCloudToVoxelGrid.h  PointsPlanesICP.h  Results.h
p2p2/src/: MultiCloudICP.cpp  PointCloudEdgesFilter.cpp  PointCloudToVoxelGrid.cpp  PointsPlanesICP.cpp
params/: icp-settings-loop-closure.yaml  icp-settings-regular.yaml  kitti-default.yaml
src/: CPointCloudVoxelGrid.cpp  LidarICP.cpp  LidarOdometry.cpp  LidarOdometry3D.cpp  MultiCloudICP.cpp
tests/: mola-test-p2p2-olae.cpp  params.yml  test-mola-fe-lidar-3d-align.cpp  test-mola-fe-lidar-3d-segment-scan.cpp  test-mola-fe-lidar-icp-align.cpp  test-mola-fe-lidar-icp-segment-scan.cpp
